# passgen

./: Cargo.toml  README.md  install.sh  passgen_install.sh  uninstall.sh
demo/: demo-basic.vhs  demo-interactive.vhs  demo-smart.vhs  generate-gifs.sh
src/: lib.rs  main.rs
tests/: passgen_tests.rs
